Replacing external Base64 dependency with usage of standard java class.